--- a/app/src/main/res/drawable/button_bg2.xml
+++ b/app/src/main/res/drawable/button_bg2.xml
@@ -1,9 +1,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle"
+    >
 
+    <solid
+        android:color="#ffff"/>
     <stroke
         android:width="20dp"
-        android:color="@color/black" />
+        android:color="@color/black" >
+
+    </stroke>
+
 
     <corners
         android:radius="1000dp">
