--- a/app/src/main/res/drawable/button_bg2.xml
+++ b/app/src/main/res/drawable/button_bg2.xml
@@ -2,10 +2,9 @@
     android:shape="rectangle"
     >
 
-    <solid
-        android:color="#ffff"/>
+    <solid android:color="@android:color/transparent" />
     <stroke
-        android:width="20dp"
+        android:width="2dp"
         android:color="@color/black" >
 
     </stroke>
